--- a/views/404.ejs
+++ b/views/404.ejs
@@ -5,7 +5,7 @@
     <title>404 Error | Kartika - Nodejs Socket.io Chat App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="Node js Socket.io real time working Chat App with Bootstrap 5 and responsive" name="description" />
-    <meta content="Themesbrand" name="author" />
+    <meta content="Nate" name="author" />
     <!-- App favicon -->
     <link rel="shortcut icon" href="assets/images/applogo-ad.ico">
     <!-- Bootstrap Css -->
