--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
   <title>Chat | Kartika - Nodejs Socket.io Chat App</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta content="Node js Socket.io real time working Chat App with Bootstrap 5 and responsive" name="description" />
-  <meta content="Themesbrand" name="author" />
+  <meta content="Nate" name="author" />
   <!-- App favicon -->
   <link rel="shortcut icon" href="assets/images/applogo-ad.ico">
    <!-- magnific-popup css -->
@@ -36,13 +36,13 @@
       <div class="navbar-brand-box">
         <a href="/" class="logo logo-dark">
           <span class="logo-sm">
-            <img src="assets/images/applogo-ad.png" alt="" height="30">
+            <img src="assets/images/applogo-ad.png" alt="" height="60">
           </span>
         </a>
 
         <a href="/" class="logo logo-light">
           <span class="logo-sm">
-            <img src="assets/images/applogo-ad.png" alt="" height="30">
+            <img src="assets/images/applogo-ad.png" alt="" height="60">
           </span>
         </a>
       </div>
