--- a/views/reset_password.ejs
+++ b/views/reset_password.ejs
@@ -5,7 +5,7 @@
     <title>Reset Password | Kartika - Nodejs Socket.io Chat App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="Node js Socket.io real time working Chat App with Bootstrap 5 and responsive" name="description" />
-    <meta content="Themesbrand" name="author" />
+    <meta content="Nate" name="author" />
     <!-- App favicon -->
     <link rel="shortcut icon" href="assets/images/applogo-ad.ico">
 
@@ -27,8 +27,8 @@
                 <div class="col-md-8 col-lg-6 col-xl-5">
                     <div class="text-center mb-4">
                         <a href="/" class="auth-logo mb-5 d-block">
-                            <img src="assets/images/logo-dark.png" alt="" height="30" class="logo logo-dark">
-                            <img src="assets/images/logo-light.png" alt="" height="30" class="logo logo-light">
+                            <img src="assets/images/applogo-ad.png" alt="" height="60" class="logo logo-dark">
+                            <img src="assets/images/applogo-ad.png" alt="" height="60" class="logo logo-light">
                         </a>
                         <h4>Reset Password</h4>
                         <p class="text-muted mb-4">Reset Password With Kartika.</p>
@@ -57,7 +57,7 @@
 
                     <div class="mt-5 text-center">
                         <p>Remember It ? <a href="login" class="fw-medium text-primary"> Signin </a> </p>
-                        <p>© <script>document.write(new Date().getFullYear())</script> Kartika. Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesbrand</p>
+                        <p>© <script>document.write(new Date().getFullYear())</script> Kartika. Crafted with <i class="mdi mdi-heart text-danger"></i> by Nate</p>
                     </div>
                 </div>
             </div>
